# notan

./: .env.example  .npmrc  Cargo.toml  README.md  docker-compose.prod.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.prod  README.md
services/backend/migrations/: 001_users.sql  002_notes.sql  003_tags.sql  004_note_tags.sql  005_users_add_stripe.sql  006_active_subscriptions.sql  006_subscriptions.sql  007_prices.sql  007_product_purchases.sql  008_owned_products.sql  008_stripe_products.sql  009_products_sync.sql  009_stripe_product_prices.sql  010_stripe_price_currencies.sql  010_users_add_name.sql  011_user_google_connections.sql  012_tags_add_color.sql  new.sh
services/backend/src/: auth.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  state.rs
services/backend/src/jwt/: email.rs  mod.rs  user.rs
services/backend/src/routes/: health.rs  mod.rs  not_found.rs  root.rs
services/backend/src/routes/auth/: login.rs  mod.rs  renew.rs  send_verification.rs  signup.rs  verify_code.rs
services/backend/src/routes/notes/: get.rs  mod.rs  post.rs
services/backend/src/routes/payments/: mod.rs  webhook.rs
services/backend/src/schemas/: active_subscriptions.rs  mod.rs  note.rs  note_tag.rs  owned_product.rs  price.rs  product_purchases.rs  products_sync.rs  stripe_price_currency.rs  stripe_product.rs  stripe_product_price.rs  tag.rs  user.rs  user_google_connection.rs
services/backend/src/utils/: mod.rs  redis_keys.rs  validation.rs
ui/app/: .env.example  (+4 more)
(+344 files in other folders)
