[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["json", "multipart", "tokio"] }
hyper = "0.14"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "request-id", "propagate-header"] }
uuid = { version = "1.4.1", features = ["v4"] }
async-stripe = { version = "0.26.0", features = ["runtime-tokio-hyper"] }

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono", "macros"] }
redis = { version = "0.23.2", features = ["tokio-native-tls-comp"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enviroment
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.19"

# Security
argon2 = "0.5.2"
rand = "0.8.5"

# Logging
pretty_env_logger = "0.5.0"

# Misc
thiserror = "1.0"
colored = "2.0.0"
oauth2 = "4.4.1"
jsonwebtoken = "8.3.0"
time = "0.3.22"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
mime_guess = "2.0.4"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
regex = "1.10.2"
